# JAY

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
docs/: ARCHITECTURE.md  EVENT_SOURCING.md  JAY_WEBSITE_CONSTITUTION.md  PHASE_1_MEMORY_CORE.md  SECURITY.md
frontend/: package-lock.json
frontend/src/: App.tsx  Layout.tsx  api.ts  index.css
frontend/src/components/: AttentionAuditWidget.tsx
frontend/src/pages/: Briefings.tsx  CommandCenter.tsx  Dashboard.tsx  Decisions.tsx  Founder.tsx  IngestionCenter.tsx  Intent.tsx  Memory.tsx  Relationships.tsx  Trust.tsx
infra/postgres/: init.sql
scripts/: import_decisions.py  import_memories.py  import_projects.py  import_relationships.py  seed_founder_profile.py
scripts/templates/: example_decisions.csv  example_founder_intent.json  example_memories.csv  example_projects.csv  example_relationships.csv
src/jay/: __init__.py  cli.py  config.py  db.py  db_vector.py
src/jay/agents/: base_agent.py  specialized.py
src/jay/api/: attention.py  auth.py  briefing.py  execution.py  ingestion.py  intent.py  leverage.py  main.py  observation.py  outcomes.py  trust.py  voice.py
src/jay/chief_of_staff/: __init__.py  commitment_monitor.py  leverage_ranker.py  prioritizer.py  project_monitor.py  recommendation_engine.py  relationship_monitor.py  router.py  schemas.py  service.py
src/jay/decisions/: analytics.py  api.py  models.py  patterns.py  projector.py  (+3 more)
tests/: test_chief_of_staff.py  test_decisions.py  test_engines.py  test_founder.py  test_memory_schemas.py  test_replay.py
(+83 files in other folders)
