[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jay"
version = "0.1.0"
description = "Local-first sovereign human operating system for one Founder."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.1",
  "edge-tts>=6.1.12",
  "llama-cpp-python>=0.2.89",
  "SpeechRecognition>=3.10.4",
  "PyAudio>=0.2.14",
  "faster-whisper>=1.0.3",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
  "python-multipart>=0.0.9",
  "PyGithub>=2.3.0",
  "qdrant-client>=1.11.0",
  "sentence-transformers>=3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.6.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

